Test/3-4_cluster.clu
Cluster size 3
Cluster number 40103        # E:      Factor:7  P:  , Ori size:3    Sub:3    From:4           
   3    4     fam_3_1           1-60       1   leng: 59
   3    4     fam_3_2           1-60       1   leng: 59
   3    4     fam_3_3           1-60       1   leng: 59
